--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,9 +3,11 @@
   "compilerOptions": {
     "target": "es2024",
     "module": "esnext",
+    "moduleResolution": "nodenext",
     "checkJs": true,
     "alwaysStrict": true,
     "resolvePackageJsonExports": true,
-    "resolvePackageJsonImports": true
+    "resolvePackageJsonImports": true,
+    "resolveJsonModule": true
   }
 }
