--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -36,22 +36,17 @@
 	],
 	"exports": {
 		".": {
-			"types": "./types/index.d.ts",
+			"types": "./dist/index.d.ts",
 			"import": "./dist/index.js",
 			"require": "./dist/index.umd.cjs"
 		}
 	},
 	"scripts": {
-		"build": "pnpm vite build",
+		"build": "pnpm vite build & pnpm rollup -c",
 		"dev": "npm run build && pnpm -w dev router",
 		"test": "npm run build && pnpm -w test router"
 	},
 	"dependencies": {
 		"@webly/rebind": "workspace:*"
-	},
-	"devDependencies": {
-		"dedent": "^1.7.1",
-		"terser": "^5.46.0",
-		"vite": "^7.3.1"
 	}
 }
