--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -14,8 +14,11 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v6
 
+      - name: Install Dependencies
+        run: pnpm install
+
       - name: Generate docs 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
-        run: |
+        run:
           npm run docs
 
       - name: Deploy 🚀
