--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
 
+      - name: Run CI
+        run: npm run ci
+
       - name: Generate docs 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run:
           npm run docs
