--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"license": "Apache-2.0",
 	"scripts": {
+		"ci": "pnpm -r run ci",
 		"docs": "typedoc",
 		"dev": "vitest",
 		"test": "vitest run"
