--- a/packages/rebind/package.json
+++ b/packages/rebind/package.json
@@ -45,6 +45,7 @@
 		"lint": "tsc",
 		"build": "npm run lint && (pnpm vite build & pnpm rollup -c)",
 		"dev": "npm run build && pnpm -w dev rebind",
-		"test": "npm run build && pnpm -w test rebind"
+		"test": "pnpm -w test rebind",
+		"ci": "npm run build && npm run test"
 	}
 }
