--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"rollup-plugin-dts": "^6.3.0",
 		"terser": "^5.46.0",
 		"typedoc": "^0.28.16",
+		"typedoc-theme-oxide": "^0.2.0",
 		"typescript": "^5.9.3",
 		"vite": "^7.3.1",
 		"vitest": "^4.0.17"
