--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,9 @@ jobs:
      
       - name: Install Dependencies
         run: pnpm install
+        
+      - name: Run CI
+        run: npm run ci
 
       - name: Create Release Pull Request
         uses: changesets/action@v1
