--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -2,7 +2,6 @@
 	"name": "@webly/router",
 	"version": "0.2.0",
 	"type": "module",
-	"main": "dist/index.mjs",
 	"author": {
 		"email": "pebrianz117@gmail.com",
 		"name": "pebrianz",
@@ -36,18 +35,39 @@
 		"frontend"
 	],
 	"exports": {
+		"./bundle": {
+			"types": "./dist/bundle/types/index.d.ts",
+			"import": "./dist/bundle/index.js",
+			"require": "./dist/bundle/index.cjs"
+		},
+		"./min": {
+			"types": "./dist/min/types/index.d.ts",
+			"import": "./dist/min/index.js",
+			"require": "./dist/min/index.cjs"
+		},
 		".": {
-			"types": "./dist/index.d.ts",
-			"import": "./dist/index.js",
-			"require": "./dist/index.umd.cjs"
+			"types": "./dist/es/types/index.d.ts",
+			"import": "./dist/es/index.js",
+			"require": "./dist/es/index.cjs"
+		},
+		"./router": {
+			"types": "./dist/es/types/router.d.ts",
+			"import": "./dist/es/router.js",
+			"require": "./dist/es/router.cjs"
 		}
 	},
 	"scripts": {
-		"lint": "tsc",
-		"build": "npm run lint && (pnpm vite build & pnpm rollup -c)",
+		"biome:ci": "pnpm -w biome ci packages/router",
+		"lint": "npm run biome:ci",
+		"typecheck": "tsc",
+		"build:bundle": "vite build -c vite.config.bundle.js",
+		"build:min": "vite build -c vite.config.min.js",
+		"build:es": "vite build -c vite.config.es.js",
+		"build:types": "rollup -c",
+		"build": "(npm run build:es && npm run build:bundle && npm run build:min) && npm run build:types",
 		"dev": "npm run build && pnpm -w dev router",
 		"test": "pnpm -w test router",
-		"ci": "npm run build && npm run test"
+		"ci": "npm run lint && npm run typecheck && npm run build && npm run test"
 	},
 	"dependencies": {
 		"@webly/rebind": "workspace:*"
